--- a/integration-layer-dsl-api/il-commons/pom.xml
+++ b/integration-layer-dsl-api/il-commons/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.sastix.csp</groupId>
     <artifactId>il-commons</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <camel.version>2.18.2</camel.version>
