SXCSP-71 implement adapter recipients building from configuration

--- a/integration-layer-dsl-api/il-server/pom.xml
+++ b/integration-layer-dsl-api/il-server/pom.xml
@@ -14,7 +14,7 @@
     <groupId>com.sastix.csp</groupId>
     <artifactId>il-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <camel.version>2.18.2</camel.version>
@@ -31,6 +31,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
