--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 server.port=8081
+#Flow 1 (list of all application Adapter API URLs for each data type)
+flow1.eventApps[0]=App0
+flow1.eventApps[1]=App1
+flow1.eventApps[2]=App2
+flow1.threatApps[0]=App0
+flow1.threatApps[1]=App1
+flow1.threatApps[2]=App2
+flow1.incidentApps[0]=App0
+flow1.incidentApps[1]=App1
+flow1.incidentApps[2]=App2
+flow1.vulnerabilityApps[0]=App0
+flow1.vulnerabilityApps[1]=App2
+flow1.vulnerabilityApps[2]=App2
+flow1.artefactApps[0]=App0
+flow1.artefactApps[1]=App1
+flow1.artefactApps[2]=App2
+#chat
+#file
+#contact
+#trustCircle
+#Flow 2 (list of one principal application Adapter API URL per data type)
+flow2.eventApps[0]=App0
+flow2.threatApps[0]=App0
+flow2.incidentApps[0]=App0
+flow2.vulnerabilityApps[0]=App0
+flow2.artefactApps[0]=App0
+#chat
+#file
+#contact
+#trustCircle
