--- a/integration-layer-dsl-api/pom.xml
+++ b/integration-layer-dsl-api/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
+		<version>1.5.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.sastix.csp</groupId>
-	<artifactId>integration-layer-dsl-api</artifactId>
+	<artifactId>parent-pom</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>integration-layer-dsl-api</name>
@@ -21,13 +21,16 @@
 		<module>il-commons</module>
 		<module>il-server</module>
 		<module>il-client</module>
+		<module>integration-tests</module>
 	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring.boot.version>1.5.1.RELEASE</spring.boot.version>
+		<spring.boot.version>1.5.2.RELEASE</spring.boot.version>
+		<spring.retry.version>1.1.2.RELEASE</spring.retry.version>
+        <camel.version>2.18.2</camel.version>
 	</properties>
 
 	<build>
