Camel mocking and testing using actual camel endpoints of Integration Server

--- a/integration-layer-dsl-api/integration-tests/pom.xml
+++ b/integration-layer-dsl-api/integration-tests/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>il-client</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-spring</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
