Enhance integration tests with MockRestServer and provide a TrustCirclesClient implementation based on RestTemplate

--- a/integration-layer-dsl-api/il-client/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-client/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-adapter.server.protocol = ${adapter.server.protocol:http}
-adapter.server.host = ${adapter.server.host:localhost}
-adpater.server.port = ${adapter.server.port:3001}
+adapter.server.protocol = http
+adapter.server.host = localhost
+adapter.server.port = 3001
+
+tc.server.protocol =http
+tc.server.host = localhost
+tc.server.port = 8081
