--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -33,3 +33,11 @@ flow2.artefactApps[0]=App0
 #contact
 #trustCircle
 
+adapter.server.protocol = http
+adapter.server.host = localhost
+adapter.server.port = 3001
+
+tc.server.protocol = http
+tc.server.host = localhost
+tc.server.port = 8081
+
