--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -3,31 +3,34 @@ server.port=8081
 elastic.uri=http://csp.dangerduck.gr:9002
 
 #Flow 1 (list of all application Adapter API URLs for each data type)
-flow1.eventApps[0]=App0
-flow1.eventApps[1]=App1
-flow1.eventApps[2]=App2
-flow1.threatApps[0]=App0
-flow1.threatApps[1]=App1
-flow1.threatApps[2]=App2
-flow1.incidentApps[0]=App0
-flow1.incidentApps[1]=App1
-flow1.incidentApps[2]=App2
-flow1.vulnerabilityApps[0]=App0
-flow1.vulnerabilityApps[1]=App2
-flow1.vulnerabilityApps[2]=App2
-flow1.artefactApps[0]=App0
-flow1.artefactApps[1]=App1
-flow1.artefactApps[2]=App2
+# moved to application.yml
+#flow1.eventApps[0]=App0
+#flow1.eventApps[1]=App1
+#flow1.eventApps[2]=App2
+#flow1.threatApps[0]=App0
+#flow1.threatApps[1]=App1
+#flow1.threatApps[2]=App2
+#flow1.incidentApps[0]=App0
+#flow1.incidentApps[1]=App1
+#flow1.incidentApps[2]=App2
+#flow1.vulnerabilityApps[0]=App0
+#flow1.vulnerabilityApps[1]=App2
+#flow1.vulnerabilityApps[2]=App2
+#flow1.artefactApps[0]=App0
+#flow1.artefactApps[1]=App1
+#flow1.artefactApps[2]=App2
+
 #chat
 #file
 #contact
 #trustCircle
 #Flow 2 (list of one principal application Adapter API URL per data type)
-flow2.eventApps[0]=App0
-flow2.threatApps[0]=App0
-flow2.incidentApps[0]=App0
-flow2.vulnerabilityApps[0]=App0
-flow2.artefactApps[0]=App0
+# moved to application.yml
+#flow2.eventApps[0]=App0
+#flow2.threatApps[0]=App0
+#flow2.incidentApps[0]=App0
+#flow2.vulnerabilityApps[0]=App0
+#flow2.artefactApps[0]=App0
 #chat
 #file
 #contact
@@ -37,7 +40,28 @@ adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
-tc.server.protocol = http
-tc.server.host = localhost
-tc.server.port = 8081
+tc.protocol = http
+tc.host = localhost
+tc.port = 8081
 
+# app data types flows - alternative
+flow1.event.apps = jitsi, viper, abc
+flow1.threat.apps = jitsi, viper, abc
+flow1.incident.apps = jitsi, viper
+flow1.vulnerability.apps = jitsi, viper
+flow1.artefact.apps = jitsi, viper, abc
+
+jitsi.protocol = http
+jitsi.host = localhost
+jitsi.port = 8080
+jitsi.path = /
+
+viper.protocol = http
+viper.host = localhost
+viper.port = 8080
+viper.path = /
+
+demoapp.protocol = http
+demoapp.host = localhost
+demoapp.port = 8080
+demoapp.path = /
