Using camelRestService to post to http endpoint

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -53,15 +53,15 @@ flow1.artefact.apps = jitsi, viper, abc
 
 jitsi.protocol = http
 jitsi.host = localhost
-jitsi.port = 8080
-jitsi.path = /
+jitsi.port = 8082
+jitsi.path = /adapter/jitsi
 
 viper.protocol = http
 viper.host = localhost
-viper.port = 8080
-viper.path = /
+viper.port = 8083
+viper.path = /adapter/viper
 
 demoapp.protocol = http
 demoapp.host = localhost
-demoapp.port = 8080
-demoapp.path = /
+demoapp.port = 8084
+demoapp.path = /adapter/demoapp
