Refactoring for more elegant usage of properties and implementation to get body from producerTemplate or camel post and various changes

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8081
 elastic.uri=http://csp.dangerduck.gr:9002
 
+#Deprecated
 #Flow 1 (list of all application Adapter API URLs for each data type)
 # moved to application.yml
 #flow1.eventApps[0]=App0
@@ -24,6 +25,7 @@ elastic.uri=http://csp.dangerduck.gr:9002
 #file
 #contact
 #trustCircle
+#Deprecated
 #Flow 2 (list of one principal application Adapter API URL per data type)
 # moved to application.yml
 #flow2.eventApps[0]=App0
@@ -40,16 +42,27 @@ adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
+
+
+# app data types flows - alternative
+internal.event.apps = jitsi, viper, demoapp
+internal.threat.apps = jitsi, viper, demoapp
+internal.incident.apps = jitsi, viper
+internal.vulnerability.apps = jitsi, viper
+internal.artefact.apps = jitsi, viper, demoapp
+internal.trustcircle.apps =
+
+external.event.apps = jitsi
+external.threat.apps = jitsi
+external.incident.apps = jitsi
+external.vulnerability.apps = jitsi
+external.artefact.apps = jitsi
+external.trustcircle.apps = tc
+
 tc.protocol = http
 tc.host = localhost
 tc.port = 8081
-
-# app data types flows - alternative
-flow1.event.apps = jitsi, viper, abc
-flow1.threat.apps = jitsi, viper, abc
-flow1.incident.apps = jitsi, viper
-flow1.vulnerability.apps = jitsi, viper
-flow1.artefact.apps = jitsi, viper, abc
+tc.path = /tc
 
 jitsi.protocol = http
 jitsi.host = localhost
