--- a/vcbridge-admin/application/pom.xml
+++ b/vcbridge-admin/application/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>eu.europa.csp</groupId>
+    <groupId>eu.europa.csp.vcbadmin</groupId>
     <artifactId>vcbridge-admin-application</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -58,7 +58,7 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 		<dependency>
-            <groupId>eu.europa.csp</groupId>
+            <groupId>eu.europa.csp.vcbadmin</groupId>
             <artifactId>vcbridge-admin-data-model</artifactId>
             <version>${project.version}</version>
         </dependency>
