--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/vcbridge
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
