--- a/vcbridge-admin/data-model/pom.xml
+++ b/vcbridge-admin/data-model/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>eu.europa.csp</groupId>
+    <groupId>eu.europa.csp.vcbadmin</groupId>
     <artifactId>vcbridge-admin-data-model</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
