SXCSP-84 Change DCL logic based on TC API from Jochen (testing in progress)

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -60,9 +60,11 @@ external.artefact.apps = jitsi
 external.trustcircle.apps = tc
 
 tc.protocol = http
-tc.host = localhost
-tc.port = 8081
-tc.path = /tc
+tc.host = csp.dangerduck.gr
+tc.port = 8000
+tc.path.circles = /api/v1/circles
+tc.path.teams = /api/v1/teams
+
 
 jitsi.protocol = http
 jitsi.host = localhost
