* Refactor to ElasticProcessor and others for correct indices. * Correct application.properties for Elastic calls and others * Support DELETE with multiple calls (comments inside) * Support PUT (skeleton - missing an endpoint)

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 
 server.port=8081
-elastic.uri=http://csp.dangerduck.gr:9002
+
+
+elastic.protocol = http
+elastic.host = csp.dangerduck.gr
+elastic.port = 9002
+elastic.path = /cspdata
 
 #Deprecated
 #Flow 1 (list of all application Adapter API URLs for each data type)
@@ -60,9 +65,11 @@ external.artefact.apps = jitsi
 external.trustcircle.apps = tc
 
 tc.protocol = http
-tc.host = localhost
-tc.port = 8081
-tc.path = /tc
+tc.host = csp.dangerduck.gr
+tc.port = 8000
+tc.path.circles = /api/v1/circles
+tc.path.teams = /api/v1/teams
+
 
 jitsi.protocol = http
 jitsi.host = localhost
