--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -2,12 +2,16 @@ spring.datasource.url=jdbc:mysql://localhost/vcbridge
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
-openfire.videobridgeHost=sastix.com
-openfire.videobridgePort=8085
-openfire.meetingRoom=dimis
+openfire.videobridgeHost=https://vc.sastix.com
+openfire.videobridgePort=9091
+openfire.authUsername=admin
+openfire.authPassword=systempass
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.thymeleaf.cache=false
+
+#vcbadmin configuration
+vcbadmin.maxTaskRetries=2
