--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -2,16 +2,30 @@ spring.datasource.url=jdbc:mysql://localhost/vcbridge
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
 openfire.videobridgeHost=https://vc.sastix.com
-openfire.videobridgePort=9091
+openfire.videobridgeEndpointPort=7443
+openfire.videobridgeAdminPort=9091
 openfire.authUsername=admin
 openfire.authPassword=systempass
+
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.thymeleaf.cache=false
 
 #vcbadmin configuration
 vcbadmin.maxTaskRetries=2
+
+# spring-boot-starter-mail properties
+spring.mail.host=smtp.zoho.com
+spring.mail.port=587
+spring.mail.username=demo@d
+spring.mail.password=pass
+spring.mail.smtp.auth=true
+spring.mail.smtps.quitwait=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.socketFactory.port=587
