--- a/Architecture/API/api_configuration_service.yaml
+++ b/Architecture/API/api_configuration_service.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 1.0.0.1
+  version: 1.0.0.2
   title: CSP Server Configuration API
 schemes:
   - https
@@ -329,8 +329,9 @@ definitions:
         type: string
       version:
         type: string
-      installed:
+      installedOn:
         type: string
+        format: date
       active:
         type: boolean
       hash:
@@ -345,7 +346,7 @@ definitions:
     required:
       - fullName
       - version
-      - installed
+      - installedOn
       - active
       - hash
   UpdateInformation:
