--- a/Architecture/API/api_application_adapter.yaml
+++ b/Architecture/API/api_application_adapter.yaml
@@ -1,19 +1,32 @@
 swagger: '2.0'
 info:
-  description: |
-    Application adapter consists of one service endpoint "/adapter" handling one resource "integrationData". Adapter accepts integrationData from the integration layer. The data is either of a data type that the application handles natively or of a data type that can be used by the application as auxiluary data. In the first case, the adapter checks if there is already a record that represents the data and updates that record (deduplication) or creates a new one. The emmition of the creation or update is depended on the "isExternal" flag.
-  version: "0.2.0"
+  description: >
+    Application adapter consists of one service endpoint "/adapter" handling one
+    resource "integrationData". Adapter accepts integrationData from the
+    integration layer. The adapter checks if there is already a record that
+    represents the data and updates that record (deduplication) or creates a new
+    one. The emmition of the creation or update is depended on the "isExternal"
+    flag.
+  version: 1.0.0.1
   title: Application Adapter API
-
 host: app.csp.org
 schemes:
   - https
 paths:
-  /adapter/integrationData:
+  /v1/adapter/integrationData:
     post:
       summary: Proccess new integration data from integration layer
-      description: |
-        Application adapter gets new data from integration layer. If the "isExternal" flag is set to false, the data is coming from another application inside the local CSP. The data is processed as such and if the process results in another data record being created or updated, the new or updated record is emited back to the integration layer. If the "isExternal" flag is set to true, the data is coming from an external CSP. The data is processed as such and if the process results in a new data record or an update to an existing data record, the new or updated record is emited back to the integration layer with the flag "toShare" set to false.
+      description: >
+        Application adapter gets new data from integratio n layer. If the
+        "isExternal" flag is set to false, the data is coming from another
+        application inside the local CSP. The data is processed as such and if
+        the process results in another data record being created or updated, the
+        new or updated record is emited back to the integration layer. If the
+        "isExternal" flag is set to true, the data is coming from an external
+        CSP. The data is processed as such and if the process results in a new
+        data record or an update to an existing data record, the new or updated
+        record is emited back to the integration layer with the flag "toShare"
+        set to false.
       operationId: addIntData
       consumes:
         - application/json
@@ -24,15 +37,18 @@ paths:
           schema:
             $ref: '#/definitions/IntegrationData'
       responses:
-        200:
+        '200':
           description: Successful operation
-        400:
+        '400':
           description: Malformed Integration Data Structure
-
+        '500':
+          description: Internal server error
+        '503':
+          description: Service anavailable
     put:
       summary: Process integration data update from integration layer
       description: |
-        (See operation addIntData)
+        (See POST)
       operationId: updateIntData
       consumes:
         - application/json
@@ -43,15 +59,26 @@ paths:
           schema:
             $ref: '#/definitions/IntegrationData'
       responses:
-        200:
+        '200':
           description: Successful operation
-        400:
+        '400':
           description: Malformed Integration Data Structure
-
+        '500':
+          description: Internal server error
+        '503':
+          description: Service anavailable
     delete:
       summary: Process integration data deletion from integration layer
-      description: |
-        Application adapter get deletion notification from integration layer. the adapter checks if that record is used by the application and updates the affected records in the application datastore. If the process results in a local data record being updated, the new or updated record is emited back to the integration layer. The dataObject is expected to be null.
+      description: >
+        Application adapter get deletion notification from integration layer.
+        the adapter checks if that record is used by the application and updates
+        the affected records in the application datastore. If the process
+        results in a local data record being updated, the new or updated record
+        is emited back to the integration layer. If the process results in a
+        local data record being deleted, the delete request is emited back to
+        the integration layer. All delete requests by the emitter have the
+        "toShare" flag to false. The dataObject is expected to be null.
+        isExternal is expected to be false.
       operationId: deleteIntData
       consumes:
         - application/json
@@ -62,9 +89,12 @@ paths:
           schema:
             $ref: '#/definitions/IntegrationData'
       responses:
-        200:
+        '200':
           description: Successful operation
-
+        '500':
+          description: Internal server error
+        '503':
+          description: Service anavailable
 definitions:
   IntegrationData:
     type: object
@@ -77,7 +107,6 @@ definitions:
         $ref: '#/definitions/IntegrationDataType'
       dataObject:
         type: string
-      
   DataParams:
     type: object
     properties:
@@ -87,20 +116,18 @@ definitions:
         type: string
       recordId:
         type: string
-    
   IntegrationDataType:
     type: string
     enum:
-    - event
-    - threat
-    - incident
-    - vulnerability
-    - artefact
-    - chat
-    - file
-    - contact
-    - trustCircle
-  
+      - event
+      - threat
+      - incident
+      - vulnerability
+      - artefact
+      - chat
+      - file
+      - contact
+      - trustCircle
   SharingParams:
     type: object
     properties:
