--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=8081
 
 
 elastic.protocol = http
-elastic.host = csp.dangerduck.gr
-elastic.port = 9002
+#elastic.host = csp.dangerduck.gr
+elastic.host = csp0.dangerduck.gr
+#elastic.port = 9002
+elastic.port = 9200
 elastic.path = /cspdata
 
 #Deprecated
