SXCSP-115: Packaging integration tests as jar and run from terminal

--- a/integration-layer-dsl-api/il-client/pom.xml
+++ b/integration-layer-dsl-api/il-client/pom.xml
@@ -8,8 +8,8 @@
         <groupId>com.sastix.csp</groupId>
         <artifactId>parent-pom</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <!--<relativePath/>-->
-        <relativePath>../pom.xml</relativePath>
+        <relativePath/>
+        <!--<relativePath>../pom.xml</relativePath>-->
     </parent>
 
     <groupId>com.sastix.csp</groupId>
