--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -21,8 +21,8 @@ vcbadmin.maxTaskRetries=2
 # spring-boot-starter-mail properties
 spring.mail.host=smtp.zoho.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=noreply@allaboutcar.com.cy
+spring.mail.password=noreplynoreply!
 spring.mail.smtp.auth=true
 spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
