SXCSP-80: Update some application properties

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 server.port = 8081
 embedded.activemq.start = false
-apache.camel.use.activemq = true
+apache.camel.use.activemq = false
 
 # ----------------------------------------
 # ACTIVEMQ (ActiveMQProperties)
@@ -35,7 +35,7 @@ activemq.broker.url = tcp://localhost:61616
 activemq.username = admin
 activemq.password = admin
 activemq.max.redelivery.delay= 60000
-activemq.max.connections = 1
+activemq.max.connections = 10
 activemq.max.retry.attempts = 10
 
 # ----------------------------------------
