SXCSP-80: Handle exceptions and redelivery

--- a/integration-layer-dsl-api/il-server/src/main/resources/application.properties
+++ b/integration-layer-dsl-api/il-server/src/main/resources/application.properties
@@ -17,9 +17,9 @@ apache.camel.use.activemq = false
 activemq.broker.url = tcp://localhost:61616
 activemq.username = admin
 activemq.password = admin
-activemq.max.redelivery.delay= 60000
+activemq.redelivery.delay= 1000
 activemq.max.connections = 10
-activemq.max.retry.attempts = 10
+activemq.max.redelivery.attempts = 5
 
 # ----------------------------------------
 # CSP Application data type flows
