various functionality improvements, date time validation, handling of meeting creation errors, added Error status in meeting, added retry functionality for a failed meeting (only if the start date is ahead)

--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.thymeleaf.cache=false
 vcbadmin.maxTaskRetries=2
 
 # spring-boot-starter-mail properties
-spring.mail.host=smtp.zoho.com
+spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
-spring.mail.username=noreply@allaboutcar.com.cy
-spring.mail.password=noreplynoreply!
+spring.mail.username=do-not-reply@sastix.com
+spring.mail.password=a!Str-1-3-X2
 spring.mail.smtp.auth=true
 spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
