--- a/vcbridge-admin/application/pom.xml
+++ b/vcbridge-admin/application/pom.xml
@@ -84,6 +84,13 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
+		<!-- <dependency>
+			<groupId>org.mnode.ical4j</groupId>
+			<artifactId>ical4j</artifactId>
+			<version>2.0.0</version>
+		</dependency> -->
+
 	</dependencies>
 
 	<build>
